<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.SignInOptionsFragment">

    <LinearLayout
        android:id="@+id/phone_auth_fields"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_100"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2.0">

            <EditText
                android:id="@+id/field_phone_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:hint="@string/hint_phone_number"
                android:inputType="phone" />

            <EditText
                android:id="@+id/field_verification_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:hint="@string/hint_verification_code"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3.0">

            <Button
                android:id="@+id/button_start_verification"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/start_phone_auth"
                android:theme="@style/ThemeOverlay.MyDarkButton" />

            <Button
                android:id="@+id/button_verify_phone"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/verify_phone_auth"
                android:theme="@style/ThemeOverlay.MyDarkButton" />

            <Button
                android:id="@+id/button_resend"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/resend_phone_auth"
                android:theme="@style/ThemeOverlay.MyDarkButton" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>