<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/phone_signin_group"
    android:layout_width="fill_parent"

    android:layout_height="wrap_content"
    android:background="@color/grey_300"
    android:gravity="center_vertical"
    android:visibility="visible">

    <LinearLayout
        android:id="@+id/phone_auth_fields"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2.0">

            <EditText
                android:id="@+id/field_enter_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:hint="@string/hint_phone_number"
                android:inputType="phone"  />

            <EditText
                android:id="@+id/field_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_confirm"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="center"
                android:layout_marginStart="70dp"
                android:gravity="center"
                android:text="@string/sign_in"
                android:theme="@style/ThemeOverlay.MyDarkButton" />

            <Button
                android:id="@+id/button_new_phoneNumber"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="center"
                android:layout_marginEnd="66dp"
                android:gravity="center"
                android:text="@string/sign_up"
                android:theme="@style/ThemeOverlay.MyDarkButton" />
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>